# Programming-Languages-Pradigms

assign1/: assign1.txt
assign1/java/: build.gradle
assign1/scala/: build.cmd  build.sh
assign2/: assign2.txt
assign2/clojure/: build.sh  project.clj
assign2/haskell/: build.cabal
assign3/: assign3.txt
assign3/groovy/: build.gradle  build.sh  settings.gradle
assign3/kotlin/: build.gradle
assign4/: assign4.txt
assign4/haskell/: build.cabal  build.sh
assign4/haskell/src/: GameOfLife.hs  driver.hs
assign4/haskell/test/: GameOfLifeTest.hs
assign4/python/: build.sh
buildstuff/groovy/: build.gradle
hw1/: hw1.txt
hw2/: hw2.txt
hw3/: hw3.txt
hw4/: hw4.txt
midterm1/: grading.txt
midterm1/q01/: IterativeSumOfSquares.kt  build.sh  question.txt
midterm1/q02/: TailRecursiveSumOfSquares.kt  build.sh  question.txt
midterm1/q03/: ImperativeGuessingGame.cpp  build.sh  question.txt
midterm1/q04/: question.txt
midterm1/q05/: build.sh  number_counter.rb  question.txt
midterm1/q06/: question.txt
midterm1/q07/: question.txt
midterm1/q08/: question.txt
midterm1/q09/: RecursiveSumOfSquares.kt  build.sh  question.txt
midterm1/q10/: question.js
midterm2/: grading.txt
midterm2/q01/: question.txt
midterm2/q02/: question.txt
midterm2/q03/: question.txt
prototype/: sample.hs
reviews/: assign1reviews.txt  assign2reviews.txt  assign3reviews.txt  assign4reviews.txt  hw1reviews.txt  hw2reviews.txt  hw3reviews.txt
scratch_code/: fibscratchcode.txt  fibscratchcodetest.txt  imperative_tests.rb  remaining_scala_tests.scala  scratch.hs
(+45 files in other folders)
